--- a/pages/6810.html
+++ b/pages/6810.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1334,7 +1334,7 @@ margin-left: 0em;
 
 <h3 id='uduality'>U-duality</h3>
 
-<p>Maximal 7d supergravity has <math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SL</mi><mo stretchy='false'>(</mo><mn>5</mn><mo>,</mo><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SL(5,\mathbb{Z})</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/U-duality'>U-duality</a> (<a href='KumarVafa96'>Kumar-Vafa 96, section 3.4</a>, <a href='#Rozali97'>Rozali 97</a>).</p>
+<p>Maximal 7d supergravity has <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SL</mi><mo stretchy='false'>(</mo><mn>5</mn><mo>,</mo><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SL(5,\mathbb{Z})</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/U-duality'>U-duality</a> (<a href='KumarVafa96'>Kumar-Vafa 96, section 3.4</a>, <a href='#Rozali97'>Rozali 97</a>).</p>
 
 <h3 id='holography'>Holography</h3>
 
@@ -1372,7 +1372,7 @@ margin-left: 0em;
 
 <h3 id='general'>General</h3>
 
-<p>The maximally <math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>N=4</annotation></semantics></math> supersymmetric <math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(5)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/gauged+supergravity'>gauged supergravity</a> in 7-dimensions was first constructed in</p>
+<p>The maximally <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>N=4</annotation></semantics></math> supersymmetric <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(5)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/gauged+supergravity'>gauged supergravity</a> in 7-dimensions was first constructed in</p>
 
 <ul>
 <li>M. Pernici, K. Pilch, and <a class='existingWikiWord' href='/nlab/show/Peter+van+Nieuwenhuizen'>Peter van Nieuwenhuizen</a>, <em>Gauged Maximally Extended Supergravity in Seven Dimensions</em> , Phys. Lett. 143B (1984) 103.</li>
@@ -1384,7 +1384,7 @@ margin-left: 0em;
 <li>M. Pernici, K. Pilch, <a class='existingWikiWord' href='/nlab/show/Peter+van+Nieuwenhuizen'>Peter van Nieuwenhuizen</a>, and N. P. Warner, <em>Noncompact Gauging and Critical Points of Maximal Supergravity in Seven Dimensions</em> , Nucl. Phys. B249 (1985) 381.</li>
 </ul>
 
-<p>The <math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> <math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sp</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Sp(1)</annotation></semantics></math>-gauged theory was described in</p>
+<p>The <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sp</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Sp(1)</annotation></semantics></math>-gauged theory was described in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Paul+Townsend'>Paul Townsend</a> and <a class='existingWikiWord' href='/nlab/show/Peter+van+Nieuwenhuizen'>Peter van Nieuwenhuizen</a>, <em>Gauged Seven-Dimensional Supergravity</em> , Phys. Lett. 125B (1983) 41.</li>
@@ -1424,15 +1424,15 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Horatiu+Nastase'>Horatiu Nastase</a>, Diana Vaman, <a class='existingWikiWord' href='/nlab/show/Peter+van+Nieuwenhuizen'>Peter van Nieuwenhuizen</a>, <em>Consistent nonlinear KK reduction of 11d supergravity on <math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>7</mn></msub><mo>×</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding='application/x-tex'>AdS_7\times S_4</annotation></semantics></math> and self-duality in odd dimensions</em> Phys.Lett. B469 (1999) 96-102 (<a href='http://arxiv.org/abs/hep-th/9905075'>arXiv:hep-th/9905075</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Horatiu+Nastase'>Horatiu Nastase</a>, Diana Vaman, <a class='existingWikiWord' href='/nlab/show/Peter+van+Nieuwenhuizen'>Peter van Nieuwenhuizen</a>, <em>Consistent nonlinear KK reduction of 11d supergravity on <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>7</mn></msub><mo>×</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding='application/x-tex'>AdS_7\times S_4</annotation></semantics></math> and self-duality in odd dimensions</em> Phys.Lett. B469 (1999) 96-102 (<a href='http://arxiv.org/abs/hep-th/9905075'>arXiv:hep-th/9905075</a>)</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Ali+Chamseddine'>Ali Chamseddine</a>, W.A. Sabra, <em><math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>7</mn></mrow><annotation encoding='application/x-tex'>D=7</annotation></semantics></math> <math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SU(2)</annotation></semantics></math> gauged supergravity from <math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>10</mn></mrow><annotation encoding='application/x-tex'>D=10</annotation></semantics></math> supergravity</em> Physics Letters B Volume 476, Issues 3-4, 16 (2000), Pages 415-419</p>
+<p><a class='existingWikiWord' href='/nlab/show/Ali+Chamseddine'>Ali Chamseddine</a>, W.A. Sabra, <em><math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>7</mn></mrow><annotation encoding='application/x-tex'>D=7</annotation></semantics></math> <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SU(2)</annotation></semantics></math> gauged supergravity from <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>10</mn></mrow><annotation encoding='application/x-tex'>D=10</annotation></semantics></math> supergravity</em> Physics Letters B Volume 476, Issues 3-4, 16 (2000), Pages 415-419</p>
 </li>
 </ul>
 
-<p>The <math class='maruku-mathml' display='inline' id='mathml_6dcc9a8bd1e71a4677d1dca7edfdef448e9fbec7_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SL</mi><mo stretchy='false'>(</mo><mn>5</mn><mo>,</mo><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SL(5,\mathbb{Z})</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/U-duality'>U-duality</a> in 7d is discussed in</p>
+<p>The <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SL</mi><mo stretchy='false'>(</mo><mn>5</mn><mo>,</mo><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SL(5,\mathbb{Z})</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/U-duality'>U-duality</a> in 7d is discussed in</p>
 
 <ul>
 <li id='KumarVafa96'>
@@ -1458,7 +1458,13 @@ margin-left: 0em;
 
 <h3 id='dauriafr_formulation_of_supergravity'>D’Auria-Fré formulation of supergravity</h3>
 
-<p>Discussion in the <a class='existingWikiWord' href='/nlab/show/D%27Auria-Fre+formulation+of+supergravity'>D&#39;Auria-Fré formulation of supergravity</a> and in particular the 7d analog of the <a class='existingWikiWord' href='/nlab/show/M-theory+supersymmetry+algebra'>DF-algebra</a>/<a class='existingWikiWord' href='/nlab/show/M-theory+supersymmetry+algebra'>M-theory super Lie algebra</a> is due to</p>
+<p>Discussion in the <a class='existingWikiWord' href='/nlab/show/D%27Auria-Fre+formulation+of+supergravity'>D&#39;Auria-Fré formulation of supergravity</a> is in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Pietro+Fr%C3%A9'>Pietro Fré</a>, P.A. Grassi, <a class='existingWikiWord' href='/nlab/show/Lucrezia+Ravera'>Lucrezia Ravera</a>, M. Trigiante, <em>Minimal <math class='maruku-mathml' display='inline' id='mathml_cfbcb721ccdb2d979726bde52527ed40561a5062_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>7</mn></mrow><annotation encoding='application/x-tex'>D=7</annotation></semantics></math> Supergravity and the supersymmetry of Arnold-Beltrami Flux branes</em>, JHEP 1606 (2016) 018 (<a href='https://arxiv.org/abs/1511.06245'>arXiv:1511.06245</a>)</li>
+</ul>
+
+<p>and the 7d analog of the <a class='existingWikiWord' href='/nlab/show/M-theory+supersymmetry+algebra'>DF-algebra</a> (the <a class='existingWikiWord' href='/nlab/show/Chevalley-Eilenberg+algebra'>Chevalley-Eilenberg algebra</a> of a spinorial extension of the <a class='existingWikiWord' href='/nlab/show/M-theory+supersymmetry+algebra'>M-theory super Lie algebra</a>) is due to</p>
 
 <ul>
 <li>
@@ -1475,14 +1481,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 25, 2018 13:10:43 
+  Revised on February 25, 2018 14:14:14 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.205)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/7-dimensional+supergravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/7-dimensional+supergravity/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/7-dimensional+supergravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/7-dimensional+supergravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/7-dimensional+supergravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/7-dimensional+supergravity/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/7-dimensional+supergravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/7-dimensional+supergravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
