--- a/pages/19008.html
+++ b/pages/19008.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Lucrezi Ravera in nLab
+      Lucrezi Ravera &gt; history in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Lucrezi Ravera
+      Lucrezi Ravera &gt; history
   </h1>
 
 
@@ -308,36 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
-<li><a href='http://www.disat.polito.it/personale/scheda/(nominativo)/lucrezia.ravera'>webpage</a></li>
-</ul>
-
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_64d28d0e9ef912d689fcb9ae0d5881872ba5e4d6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/M-theory+supersymmetry+algebra'>M-theory super Lie algebra</a></li>
-</ul>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+    <p>see <em><a class='existingWikiWord' href='/nlab/show/Lucrezia+Ravera'>Lucrezia Ravera</a></em></p>
 </div>
 
 <div class="revisedby">
-  Created on February 20, 2018 01:29:48 
+  Revised on February 26, 2018 04:06:33 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lucrezi+Ravera" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Lucrezi+Ravera+%3E+history" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lucrezi+Ravera+%3E+history/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Lucrezi+Ravera+%3E+history" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lucrezi+Ravera+%3E+history" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Lucrezi+Ravera" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Lucrezi+Ravera+%3E+history" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Lucrezi+Ravera" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Lucrezi+Ravera+%3E+history" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Lucrezi+Ravera" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Lucrezi+Ravera+%3E+history" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
