--- a/pages/8910.html
+++ b/pages/8910.html
@@ -324,7 +324,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>The first chapter of her forthcoming book `Lattices of theories&#39;.</p>
+<p>The first chapter of her book <a href='https://global.oup.com/academic/product/theories-sites-toposes-9780198758914'>Theories, Sites, Toposes</a>.</p>
 
 <ul>
 <li>Olivia Caramello, <em>Topos theoretic background</em>, <a href='http://www.oliviacaramello.com/Unification/ToposTheoreticPreliminariesOliviaCaramello.pdf'>PDF</a></li>
@@ -334,14 +334,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 15, 2017 05:40:06 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (146.232.15.204)
+  Revised on February 26, 2018 07:32:33 
+  by <span class="newWikiWord">Hieronymous Coward<a href="/nlab/new/HieronymousCoward">?</a></span>
+  (146.232.74.14)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Olivia+Caramello" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Olivia+Caramello/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Olivia+Caramello" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Olivia+Caramello" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Olivia+Caramello" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Olivia+Caramello/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Olivia+Caramello" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Olivia+Caramello" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
