--- a/pages/1691.html
+++ b/pages/1691.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -393,7 +393,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a>, <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a></p>
 </li>
 
 <li>
@@ -406,9 +406,21 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/chain+homology+and+cohomology'>chain homology and cohomology</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homological+resolution'>homological resolution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></p>
+</li>
 </ul>
 </li>
 
@@ -723,7 +735,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+cohomology'>etale cohomology</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+cohomology'>etale cohomology</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/group+of+units'>group of units</a>, <a class='existingWikiWord' href='/nlab/show/Picard+group'>Picard group</a>, <a class='existingWikiWord' href='/nlab/show/Brauer+group'>Brauer group</a></li>
@@ -817,7 +829,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/%C4%8Cech+cohomology'>Čech cohomology</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C4%8Cech+cohomology'>?ech cohomology</a></p>
 </li>
 
 <li>
@@ -959,7 +971,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/de+Rham+theorem'>de Rham theorem</a>, <a class='existingWikiWord' href='/nlab/show/Poincare+lemma'>Poincare lemma</a>, <a class='existingWikiWord' href='/nlab/show/Stokes+theorem'>Stokes theorem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/de+Rham+theorem'>de Rham theorem</a>, <a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+lemma'>Poincare lemma</a>, <a class='existingWikiWord' href='/nlab/show/Stokes+theorem'>Stokes theorem</a></p>
 </li>
 
 <li>
@@ -1194,27 +1206,33 @@ margin-left: 0em;
 
 <h2 id='statement'>Statement</h2>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/group'>group</a>, <math class='maruku-mathml' display='inline' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>K\subset G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/normal+subgroup'>normal subgroup</a> and <math class='maruku-mathml' display='inline' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> a left <math class='maruku-mathml' display='inline' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/module'>module</a>. The <a class='existingWikiWord' href='/nlab/show/group+cohomology'>group cohomology</a> groups <math class='maruku-mathml' display='inline' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>H</mi> <mi>n</mi></msup><mo stretchy='false'>(</mo><mi>G</mi><mo>,</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>H^n(G,A)</annotation></semantics></math> form the <a class='existingWikiWord' href='/nlab/show/derived+functor+in+homological+algebra'>derived functors</a> of the <a class='existingWikiWord' href='/nlab/show/invariant'>invariants</a> functor <math class='maruku-mathml' display='inline' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>↦</mo><msup><mi>A</mi> <mi>G</mi></msup><mo>=</mo><mo stretchy='false'>{</mo><mi>a</mi><mo>∈</mo><mi>A</mi><mo stretchy='false'>|</mo><mi>g</mi><mi>a</mi><mo>=</mo><mi>a</mi><mo>,</mo><mi>g</mi><mo>∈</mo><mi>G</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>A\mapsto A^G = \{ a\in A | g a = a, g\in G\}</annotation></semantics></math>.</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/group'>group</a>, <math class='maruku-mathml' display='inline' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>K\subset G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/normal+subgroup'>normal subgroup</a> and <math class='maruku-mathml' display='inline' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> a left <math class='maruku-mathml' display='inline' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/module'>module</a>. The <a class='existingWikiWord' href='/nlab/show/group+cohomology'>group cohomology</a> groups <math class='maruku-mathml' display='inline' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>H</mi> <mi>n</mi></msup><mo stretchy='false'>(</mo><mi>G</mi><mo>,</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>H^n(G,A)</annotation></semantics></math> form the <a class='existingWikiWord' href='/nlab/show/derived+functor+in+homological+algebra'>derived functors</a> of the <a class='existingWikiWord' href='/nlab/show/invariant'>invariants</a> functor <math class='maruku-mathml' display='inline' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>↦</mo><msup><mi>A</mi> <mi>G</mi></msup><mo>=</mo><mo stretchy='false'>{</mo><mi>a</mi><mo>∈</mo><mi>A</mi><mo stretchy='false'>|</mo><mi>g</mi><mi>a</mi><mo>=</mo><mi>a</mi><mo>,</mo><mi>g</mi><mo>∈</mo><mi>G</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>A\mapsto A^G = \{ a\in A | g a = a, g\in G\}</annotation></semantics></math>.</p>
 
 <p>The invariants can be computed in two stages, hence as the <a class='existingWikiWord' href='/nlab/show/composition'>composite</a> of two <a class='existingWikiWord' href='/nlab/show/functor'>functors</a> as</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mi>G</mi></msup><mo>=</mo><mo stretchy='false'>(</mo><msup><mi>A</mi> <mi>K</mi></msup><msup><mo stretchy='false'>)</mo> <mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>K</mi></mrow></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mi>G</mi></msup><mo>=</mo><mo stretchy='false'>(</mo><msup><mi>A</mi> <mi>K</mi></msup><msup><mo stretchy='false'>)</mo> <mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>K</mi></mrow></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   A^G = (A^K)^{G/K}
   \,.
 
 </annotation></semantics></math></div>
-<p>The <em>Hochschild–Serre spectral sequence</em> is the <a class='existingWikiWord' href='/nlab/show/Grothendieck+spectral+sequence'>Grothendieck spectral sequence</a> for the composition of these functors. Its <math class='maruku-mathml' display='inline' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>E_2</annotation></semantics></math>-page is</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>E</mi> <mn>2</mn> <mrow><mi>p</mi><mo>,</mo><mi>q</mi></mrow></msubsup><mo>=</mo><msup><mi>H</mi> <mi>p</mi></msup><mo stretchy='false'>(</mo><mi>G</mi><mo stretchy='false'>/</mo><mi>K</mi><mo>,</mo><msup><mi>H</mi> <mi>q</mi></msup><mo stretchy='false'>(</mo><mi>K</mi><mo>,</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>The <em>Hochschild–Serre spectral sequence</em> is the <a class='existingWikiWord' href='/nlab/show/Grothendieck+spectral+sequence'>Grothendieck spectral sequence</a> for the composition of these functors. Its <math class='maruku-mathml' display='inline' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>E_2</annotation></semantics></math>-page is</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>E</mi> <mn>2</mn> <mrow><mi>p</mi><mo>,</mo><mi>q</mi></mrow></msubsup><mo>=</mo><msup><mi>H</mi> <mi>p</mi></msup><mo stretchy='false'>(</mo><mi>G</mi><mo stretchy='false'>/</mo><mi>K</mi><mo>,</mo><msup><mi>H</mi> <mi>q</mi></msup><mo stretchy='false'>(</mo><mi>K</mi><mo>,</mo><mi>A</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   E^{p,q}_2 = H^p(G/K,H^q(K,A))
 
 </annotation></semantics></math></div>
-<p>and it is converging to the <a class='existingWikiWord' href='/nlab/show/group+cohomology'>group cohomology</a> <math class='maruku-mathml' display='inline' id='mathml_ba573246bd5bb41a22966d4183eba9c7de2b8689_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>E</mi> <mn>∞</mn> <mi>n</mi></msubsup><mo>=</mo><msup><mi>H</mi> <mi>n</mi></msup><mo stretchy='false'>(</mo><mi>G</mi><mo>,</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>E^n_\infty = H^n(G,A)</annotation></semantics></math>.</p>
+<p>and it is converging to the <a class='existingWikiWord' href='/nlab/show/group+cohomology'>group cohomology</a> <math class='maruku-mathml' display='inline' id='mathml_ea1d3551f491ca986ad0d8881e18519e6c3958a0_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>E</mi> <mn>∞</mn> <mi>n</mi></msubsup><mo>=</mo><msup><mi>H</mi> <mi>n</mi></msup><mo stretchy='false'>(</mo><mi>G</mi><mo>,</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>E^n_\infty = H^n(G,A)</annotation></semantics></math>.</p>
 
 <p>There is a similar spectral sequence for <a class='existingWikiWord' href='/nlab/show/group+homology'>group homology</a> obtained as a Grothendieck spectral sequence for the two-stage computation of <a class='existingWikiWord' href='/nlab/show/coinvariant'>coinvariants</a>.</p>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/James+Milne'>James Milne</a>, section 14 of <em><a class='existingWikiWord' href='/nlab/show/Lectures+on+%C3%89tale+Cohomology'>Lectures on Étale Cohomology</a></em></li>
+<li id='HochschildSerre53'>
+<p><a class='existingWikiWord' href='/nlab/show/Gerhard+Hochschild'>Gerhard Hochschild</a>, <a class='existingWikiWord' href='/nlab/show/Jean-Pierre+Serre'>Jean-Pierre Serre</a>, <em>Cohomology of Lie algebras</em>, Annals of Mathematics, Second Series, Vol. 57, No. 3 (May, 1953), pp. 591-603 (<a href='http://www.jstor.org/stable/1969740'>JSTOR</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/James+Milne'>James Milne</a>, section 14 of <em><a class='existingWikiWord' href='/nlab/show/Lectures+on+%C3%89tale+Cohomology'>Lectures on Étale Cohomology</a></em></p>
+</li>
 </ul>
 
 <p>
@@ -1223,14 +1241,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September  8, 2016 08:15:05 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (134.58.253.57)
+  Revised on February 26, 2018 12:57:51 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hochschild-Serre+spectral+sequence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hochschild-Serre+spectral+sequence/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Hochschild-Serre+spectral+sequence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hochschild-Serre+spectral+sequence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Hochschild-Serre+spectral+sequence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hochschild-Serre+spectral+sequence/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Hochschild-Serre+spectral+sequence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hochschild-Serre+spectral+sequence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
